--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+  padding: 0;
+  margin: 0;
+}
+
+.btn {
+  padding: 0.8rem 2rem;
+  border-radius: 0.2rem;
+  border: 1px solid black;
+  cursor: pointer;
+  display: inline-block;
+}
+
+.container {
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
+}
