Fixed some bugs in the redirect flow

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav>
   <h1>Pencil App</h1>
   <a (click)="logout()" *ngIf="authService.user">Logout</a>
-  <a routerLink="/">Dashboard</a>
+  <!-- <a routerLink="/">Dashboard</a> -->
 </nav>
 
 <router-outlet></router-outlet>
